--- a/server/package.json
+++ b/server/package.json
@@ -21,17 +21,20 @@
   },
   "homepage": "https://github.com/ridgeontheway/Emaily#readme",
   "dependencies": {
-    "concurrently": "^5.0.2",
-    "cookie-session": "^1.3.3",
-    "express": "^4.17.1",
-    "mongoose": "^5.7.5",
-    "passport": "^0.4.0",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.23",
     "@types/node": "^13.1.6",
     "@types/passport": "^1.0.1",
     "@types/passport-google-oauth20": "^2.0.2",
+    "aws-sdk": "^2.601.0",
+    "concurrently": "^5.0.2",
+    "cookie-session": "^1.3.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.5",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "ts-node": "^8.6.0",
     "typescript": "^3.7.4"
@@ -45,6 +48,8 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
+    "@types/multer": "^1.3.10",
+    "@types/multer-s3": "^2.7.7",
     "babel-core": "^7.0.0-bridge.0",
     "nodemon": "^1.19.4"
   }
