--- a/server/package.json
+++ b/server/package.json
@@ -30,10 +30,14 @@
     "aws-sdk": "^2.601.0",
     "concurrently": "^5.0.2",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
+    "epub": "^1.2.0",
     "express": "^4.17.1",
+    "html-to-text": "^5.1.1",
     "mongoose": "^5.7.5",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-html-parser": "^1.1.18",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "ts-node": "^8.6.0",
