--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "node-html-parser": "^1.1.18",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^2.3.0",
     "ts-node": "^8.6.0",
     "typescript": "^3.7.4"
   },
