--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ridgeontheway/Emaily#readme",
   "dependencies": {
+    "@google-cloud/speech": "^3.5.4",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.23",
