--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^13.1.6",
     "@types/passport": "^1.0.1",
     "@types/passport-google-oauth20": "^2.0.2",
+    "@types/socket.io": "^2.1.4",
     "aws-sdk": "^2.601.0",
     "concurrently": "^5.0.2",
     "cookie-session": "^1.3.3",
