--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "scripts": {
         "start": "npm run start --prefix server",
-        "heroku-postbuild": "npm run build-for-deployment --prefix server"
-    }
+        "heroku-postbuild": "npm run build-for-deployment --prefix server",
+        "pre-commit": "npm run lint --prefix server && npm run lint --prefix client"
+    },
+    "pre-commit": [
+        "pre-commit"
+    ]
 }
