--- a/server/client/package.json
+++ b/server/client/package.json
@@ -21,7 +21,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "lint-staged"
+  },
+  "lint-staged": {
+      "*.js": [
+        "prettier --write",
+        "git add"
+      ],
+      "*.ts": [
+        "prettier --write",
+        "git add"
+      ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +50,19 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier-standard": "^3.0.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "pre-commit": "^1.2.2",
+    "prettier": "1.19.1",
+    "prettier-config-standard": "^1.0.1",
     "standard": "^14.3.1"
   }
 }
