--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,18 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server-dev\" \"npm run client\"",
     "server-dev": "nodemon index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "lint-staged"
+  },
+  "lint-staged": {
+      "*.js": [
+        "prettier --write",
+        "git add"
+      ],
+      "*.ts": [
+        "prettier --write",
+        "git add"
+      ]
   },
   "repository": {
     "type": "git",
@@ -55,9 +66,24 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
+    "@types/cors": "^2.8.6",
+    "@types/glob": "^7.1.1",
     "@types/multer": "^1.3.10",
     "@types/multer-s3": "^2.7.7",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "babel-core": "^7.0.0-bridge.0",
-    "nodemon": "^1.19.4"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier-standard": "^3.0.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "pre-commit": "^1.2.2",
+    "prettier": "1.19.1",
+    "prettier-config-standard": "^1.0.1"
   }
 }
