--- a/server/client/package.json
+++ b/server/client/package.json
@@ -6,10 +6,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "http-proxy-middleware": "^0.20.0",
     "materialize-css": "^1.0.0-rc.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -25,14 +29,10 @@
     "lint": "lint-staged"
   },
   "lint-staged": {
-      "*.js": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.ts": [
-        "prettier --write",
-        "git add"
-      ]
+    "*.js": [
+      "prettier-standard --lint",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -62,7 +62,6 @@
     "eslint-plugin-standard": "^4.0.1",
     "pre-commit": "^1.2.2",
     "prettier": "1.19.1",
-    "prettier-config-standard": "^1.0.1",
-    "standard": "^14.3.1"
+    "prettier-config-standard": "^1.0.1"
   }
 }
