--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,14 @@
     "lint": "lint-staged && npm run lint --prefix client"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.ts": [
-      "prettier --write",
-      "git add"
-    ]
+      "*.js": [
+        "prettier-standard --lint",
+        "git add"
+      ],
+      "*.ts": [
+        "prettier-standard --lint",
+        "git add"
+      ]
   },
   "repository": {
     "type": "git",
