Created mock UI for login-page
refs #19

TODO: needs to be responsive / handle small screen res

--- a/server/client/package.json
+++ b/server/client/package.json
@@ -30,7 +30,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier-standard --lint",
+      "prettier --write",
       "git add"
     ]
   },
