OAUTH flow re-implemented for log-in screen
refs #19

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     },
     "pre-commit": [
         "pre-commit"
-    ]
+    ],
+    "devDependencies": {
+        "pre-commit": "^1.2.2"
+    }
 }
