--- a/server/client/package.json
+++ b/server/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-prettier-standard": "^3.0.1",
