--- a/server/client/package.json
+++ b/server/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "form-data": "^3.0.0",
     "http-proxy-middleware": "^0.20.0",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
