--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "@types/passport-google-oauth20": "^2.0.2",
     "@types/socket.io": "^2.1.4",
     "aws-sdk": "^2.601.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
