--- a/server/client/package.json
+++ b/server/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "prettier": "prettier-config-standard",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -9,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "form-data": "^3.0.0",
     "http-proxy-middleware": "^0.20.0",
+    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -24,7 +26,7 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "BROWSER='none' react-scripts start",
+    "start": "BROWSER='google-chrome-stable' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
