--- a/server/client/package.json
+++ b/server/client/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "string-similarity": "^4.0.1"
   },
   "scripts": {
     "start": "BROWSER='google-chrome-stable' react-scripts start",
