--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "start": "ts-node index.ts",
-    "build-for-deployment": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install && npm run build --prefix client",
+    "build-for-deployment": "NPM_CONFIG_PRODUCTION=false npm ci --prefix client && npm ci && npm run build --prefix client",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server-dev\" \"npm run client\"",
     "debug": "nodemon --inspect ./index.ts --ignore public",
