update to post-build

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "wordworm",
   "prettier": "prettier-config-standard",
   "scripts": {
-    "start": "node ./build/index.js",
-    "build-for-deployment": "NPM_CONFIG_PRODUCTION=false npm ci && tsc && npm ci --prefix client && npm run build --prefix client",
+    "start": "node ./build-api/index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc && rm -r ./api && npm install --prefix client && npm run build --prefix client",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server-dev\" \"npm run client\"",
     "debug": "nodemon --inspect ./api/index.ts --ignore public",
