--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-html-parser": "^1.1.18",
+    "node-pre-gyp": "^0.14.0",
     "normalize-port": "^1.0.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
