--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.7.5",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-gyp": "^6.1.0",
     "node-html-parser": "^1.1.18",
     "node-pre-gyp": "^0.14.0",
     "normalize-port": "^1.0.0",
