--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "concurrently \"npm run server-dev\" \"npm run client\"",
     "debug": "nodemon --inspect ./api/index.ts --ignore public",
     "server-dev": "nodemon ./api/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "pre-commit": "npm run lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@google-cloud/speech": "^3.5.4",
@@ -68,9 +67,18 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.3",
     "nodemon": "^2.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "1.19.1",
     "prettier-config-standard": "^1.0.1"
+  },
+  "lint-staged": {
+    "*.ts": "prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
