--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pre-commit": "lint-staged"
   },
+  "pre-commit": [
+    "pre-commit"
+  ],
+  "lint-staged": {
+    "*.ts": "prettier --write"
+  },
   "dependencies": {
     "@google-cloud/speech": "^3.5.4",
     "@types/cookie-session": "^2.0.37",
@@ -68,12 +74,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "lint-staged": "^10.0.9",
     "nodemon": "^2.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "1.19.1",
     "prettier-config-standard": "^1.0.1"
-  },
-  "lint-staged": {
-    "*.ts": "prettier --write"
   }
 }
