--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "debug": "nodemon --inspect ./api/index.ts --ignore public",
     "server-dev": "nodemon ./api/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged && npm run pre-commit --prefix client"
   },
   "pre-commit": [
     "pre-commit"
   ],
   "lint-staged": {
-    "*.ts": "prettier --write"
+    "*.ts": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@google-cloud/speech": "^3.5.4",
