--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
@@ -73,5 +73,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "1.19.1",
     "prettier-config-standard": "^1.0.1"
+  },
+  "resolutions": {
+    "react-dev-utils": "10.1.0"
   }
 }
