--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "form-data": "^3.0.0",
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
