--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "classnames": "^2.2.6",
     "form-data": "^3.0.0",
     "http-proxy-middleware": "^0.20.0",
-    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -70,6 +69,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
+    "grunt": "^1.1.0",
+    "grunt-remove-logging-calls": "^0.1.2",
     "lint-staged": "^10.0.9",
     "pre-commit": "^1.2.2",
     "prettier": "1.19.1",
