--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "form-data": "^3.0.0",
+    "get-user-media-promise": "^1.1.4",
     "http-proxy-middleware": "^0.20.0",
     "materialize-css": "^1.0.0-rc.2",
+    "microphone-stream": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
